--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,19 @@
 {
-  "name": "vendor/ciwordpress",
-  "description": "A WordPress project setup with CI/CD using GitHub Actions",
-  "license": "MIT",
+  "name": "qqhere/wordpress-project",
+  "description": "A WordPress project",
+  "type": "project",
   "require": {
-      "php": "^8.1.2",
-      "composer/installers": "^1.9"
+    "php": ">=7.4",
+    "composer/installers": "~1.0"
+  },
+  "license": "proprietary",
+  "extra": {
+    "installer-paths": {
+      "wp-content/plugins/{$name}/": ["type:wordpress-plugin"],
+      "wp-content/themes/{$name}/": ["type:wordpress-theme"]
+    }
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
   }
-  }
+}
