--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,12 @@
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
-  }
+  },
+  "config": {
+        "allow-plugins": {
+            "third-party/required-plugin": true,
+            "my-organization/*": true,
+            "unnecessary/plugin": false
+        }
+    }
 }
